src/tests/routes/crates/snapshots/crates_io__tests__routes__crates__downloads__crate_downloads.snap
---
source: src/tests/routes/crates/downloads.rs
expression: json
snapshot_kind: text
---
{
  "meta": {
    "extra_downloads": []
  },
  "version_downloads": [
    {
      "date": "[date]",
      "downloads": 1,
      "version": 2
    },
    {
      "date": "[date]",
      "downloads": 3,
      "version": 1
    }
  ]
}
