src/tests/routes/crates/snapshots/crates_io__tests__routes__crates__downloads__version_downloads.snap
---
source: src/tests/routes/crates/downloads.rs
expression: json
---
{
  "version_downloads": [
    {
      "date": "[date]",
      "downloads": 3,
      "version": 1
    }
  ]
}
